--- a/templates/quiz/admin_add_course.html
+++ b/templates/quiz/admin_add_course.html
@@ -15,11 +15,11 @@
 <form method="POST" autocomplete="off" style="margin:100px;margin-top: 0px;">
     {%csrf_token%}
     <div class="form-group">
-        <label for="course_name">Course Name</label> {% render_field courseForm.course_name class="form-control" placeholder="Java" %}
+        <label for="course_name">Course Name</label> {% render_field courseForm.course_name class="form-control" placeholder="ชื่อรายวิชา" %}
 
-        <label for="question_number">Total Question</label> {% render_field courseForm.question_number class="form-control" placeholder="10" %}
+        <label for="question_number">Total Question</label> {% render_field courseForm.question_number class="form-control" placeholder="จำนวนคำถามทั้งหมด" %}
 
-        <label for="total_marks">Total Marks</label> {% render_field courseForm.total_marks class="form-control" placeholder="50" %}
+        <label for="total_marks">Total Marks</label> {% render_field courseForm.total_marks class="form-control" placeholder="คะแนนรวม" %}
     </div>
 
 
